After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755673 - When taking a snapshot of window, other windows are present in the resulting picture
When taking a snapshot of window, other windows are present in the resulting ...
Status: RESOLVED FIXED
Product: gnome-flashback
Classification: Other
Component: general
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Flashback Maintainers
GNOME Flashback Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-26 18:01 UTC by Dmitry Shachnev
Modified: 2016-01-27 10:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-flashback.png (108.17 KB, image/png)
2015-09-26 18:01 UTC, Dmitry Shachnev
Details
gnome-shell.ong (94.91 KB, image/png)
2015-09-26 18:01 UTC, Dmitry Shachnev
Details

Description Dmitry Shachnev 2015-09-26 18:01:16 UTC
Created attachment 312211 [details]
gnome-flashback.png

[ I could not find a screenshot component in bugzilla. If you create one, please move this bug to there. ]

Please look at the attached screenshots. Both are made with gnome-screenshot --window, one in GNOME Shell session and one in GNOME Flashback.

As you can see, the GNOME Shell one contains *only* the needed window (note also the transparent corners). If one enables the shadow effect, then there are also semi-transparent borders (in addition to corners).

The GNOME Flashback screenshot contains parts of other windows, which is not the expected behavior (it's --window and not --area).
Comment 1 Dmitry Shachnev 2015-09-26 18:01:54 UTC
Created attachment 312212 [details]
gnome-shell.ong
Comment 2 Alberts Muktupāvels 2016-01-27 08:44:11 UTC
Fixed in master. Should I push same fix to gnome-3-18?
Comment 3 Dmitry Shachnev 2016-01-27 10:15:35 UTC
Thanks! Personally I'm fine with it being only in master, but if you push it to gnome-3-18, then Ubuntu 16.04 users will get it too.
Comment 4 Alberts Muktupāvels 2016-01-27 10:31:12 UTC
Pushed also to gnome-3-18.