screenshot: handle csd window screenshots differently

https://bugzilla.gnome.org/show_bug.cgi?id=755673